Bug 87132 - CRASH when attempting insert/playback of WMV file
Summary: CRASH when attempting insert/playback of WMV file
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.4.0.0.beta1
Hardware: Other All
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.5.0 target:4.4.0.0.beta3
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-09 03:14 UTC by Robinson Tryon (qubit)
Modified: 2014-12-09 11:37 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example WMV that causes Impress to crash (427.46 KB, video/x-ms-wmv)
2014-12-09 04:26 UTC, Robinson Tryon (qubit)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robinson Tryon (qubit) 2014-12-09 03:14:57 UTC
TESTING with LO 4.4.0.0.beta2 + Ubuntu 14.04

Repro steps:

- Open Impress
- Download a test WMV from Archive.org
    Page: https://archive.org/details/WorkToFishtestwmv
    File: https://archive.org/download/WorkToFishtestwmv/test_wmv.wmv
- Embed the media using Insert -> Media -> Audio or Video
- If the program hasn't crashed yet, try clicking on the Play button or the slider in the media playback tools

RESULT: LO crashes


Error message output:

** Message: don't know how to handle audio/x-wma, wmaversion=(int)2, bitrate=(int)64040, depth=(int)16, rate=(int)44100, channels=(int)2, block_align=(int)1487, codec_data=(buffer)008800000f00792e0000
** Message: don't know how to handle video/x-wmv, wmvversion=(int)3, width=(int)320, height=(int)240, codec_data=(buffer)4e791a01, format=(fourcc)WMV3
** Message: don't know how to handle audio/x-wma, wmaversion=(int)2, bitrate=(int)64040, depth=(int)16, rate=(int)44100, channels=(int)2, block_align=(int)1487, codec_data=(buffer)008800000f00792e0000
** Message: don't know how to handle video/x-wmv, wmvversion=(int)3, width=(int)320, height=(int)240, codec_data=(buffer)4e791a01, format=(fourcc)WMV3
** Message: don't know how to handle audio/x-wma, wmaversion=(int)2, bitrate=(int)64040, depth=(int)16, rate=(int)44100, channels=(int)2, block_align=(int)1487, codec_data=(buffer)008800000f00792e0000
** Message: don't know how to handle video/x-wmv, wmvversion=(int)3, width=(int)320, height=(int)240, codec_data=(buffer)4e791a01, format=(fourcc)WMV3
** Message: don't know how to handle audio/x-wma, wmaversion=(int)2, bitrate=(int)64040, depth=(int)16, rate=(int)44100, channels=(int)2, block_align=(int)1487, codec_data=(buffer)008800000f00792e0000
** Message: don't know how to handle video/x-wmv, wmvversion=(int)3, width=(int)320, height=(int)240, codec_data=(buffer)4e791a01, format=(fourcc)WMV3
** Message: don't know how to handle audio/x-wma, wmaversion=(int)2, bitrate=(int)64040, depth=(int)16, rate=(int)44100, channels=(int)2, block_align=(int)1487, codec_data=(buffer)008800000f00792e0000
** Message: don't know how to handle video/x-wmv, wmvversion=(int)3, width=(int)320, height=(int)240, codec_data=(buffer)4e791a01, format=(fourcc)WMV3

(soffice:9398): GStreamer-CRITICAL **: Failed to deactivate pad asfdemux4:sink, very bad

(soffice:9398): GStreamer-CRITICAL **: Failed to deactivate pad typefind:src, very bad

(soffice:9398): GStreamer-CRITICAL **: 
Trying to dispose element typefind, but it is in PAUSED instead of the NULL state.
You need to explicitly set elements to the NULL state before
dropping the final reference, to allow them to clean up.
This problem may also be caused by a refcounting bug in the
application or some element.


(soffice:9398): GStreamer-CRITICAL **: 
Trying to dispose element decodebin4, but it is in PAUSED instead of the NULL state.
You need to explicitly set elements to the NULL state before
dropping the final reference, to allow them to clean up.
This problem may also be caused by a refcounting bug in the
application or some element.

** Message: don't know how to handle audio/x-wma, wmaversion=(int)2, bitrate=(int)64040, depth=(int)16, rate=(int)44100, channels=(int)2, block_align=(int)1487, codec_data=(buffer)008800000f00792e0000
** Message: don't know how to handle video/x-wmv, wmvversion=(int)3, width=(int)320, height=(int)240, codec_data=(buffer)4e791a01, format=(fourcc)WMV3

** (soffice:9398): WARNING **: Invalidate all children called

** Message: don't know how to handle audio/x-wma, wmaversion=(int)2, bitrate=(int)64040, depth=(int)16, rate=(int)44100, channels=(int)2, block_align=(int)1487, codec_data=(buffer)008800000f00792e0000
** Message: don't know how to handle video/x-wmv, wmvversion=(int)3, width=(int)320, height=(int)240, codec_data=(buffer)4e791a01, format=(fourcc)WMV3

** (soffice:9398): WARNING **: Unknown event notification 36
Comment 1 Robinson Tryon (qubit) 2014-12-09 04:14:31 UTC
More notes:
- Playback of given WMV is fine in Totem 3.10.1
- Inserting WMV into document in Writer also causes crash

TESTING with LO 4.3.5.1 + Ubuntu 14.04 shows similar error messages in the terminal, but NO crash.

(After confirmation, please mark w/regression keyword and tag w/bibisectRequest)
Comment 2 Robinson Tryon (qubit) 2014-12-09 04:26:34 UTC
Created attachment 110603 [details]
Example WMV that causes Impress to crash

Sample public domain WMV:
https://archive.org/details/Pixiecherries-StockFootageLightening02-PublicDomain
Comment 3 Jacques Guilleron 2014-12-09 10:19:59 UTC
Hi Robinson Tryon,

I don't reproduce using LO  4.4.0.0.beta1
Build ID: 9af3d21234aa89dac653c0bd76648188cdeb683e
& Windows 7 Home Premium.

Regards,

Jacques
Comment 4 Caolán McNamara 2014-12-09 10:56:43 UTC
"Invalidate all children called" implied a11y is active. So perhaps this is the a11y related bug that I can reproduce here locally.
Comment 5 Commit Notification 2014-12-09 11:33:59 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fa517ab03d9e65291a4b0f25a1188ffe454f6f3e

Resolves: fdo#87132 a11y crash on clicking outside of inline playback window

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2014-12-09 11:35:18 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1c4091eb525ff3a117e29da06bf66fa37928c70b&h=libreoffice-4-4

Resolves: fdo#87132 a11y crash on clicking outside of inline playback window

It will be available in 4.4.0.0.beta3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2014-12-09 11:37:59 UTC
Well, fixed the bug that affected me, hopefully the same one as reported.